--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"react-polyfills": "0.0.1",
 		"react-promise-tracker": "^2.1.1",
 		"react-router-dom": "^6.3.0",
+		"sweetalert2": "^11.6.13",
 		"swiper": "^11.0.7"
 	}
 }
